kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
spec:
  type: ClusterIP      # Optional: ClusterIP is the default type
  selector:
    app: homework        # Matches pods with the label "app: my-app"
  ports:
    - protocol: TCP
      port: 80         # The port the service listens on inside the cluster
      targetPort: 8000
