kubernetes-networks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: homework
  annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /index.html
spec:
  ingressClassName: nginx  # Specifies the NGINX controller
  rules:
  - host: homework.otus     
    http:
      paths:
      - path: /index.html
        pathType: Exact
        backend:
          service:
            name: webserver-service
            port:
              number: 80
      - path: /homepage
        pathType: Prefix
        backend:
          service:
            name: webserver-service
            port: 
              number: 80
